syntax="proto3";

package vitepb;

import "vitepb/snapshot_block_db.proto";

message SnapshotBlockNet {
    bytes hash = 1;
    bytes prevHash = 2;
    bytes height = 3;
    bytes producer = 4;
    map<string, SnapshotItem> snapshot = 5;

    bytes signature = 6;
    uint64 timestamp = 7;
    bytes amount = 8;

    bytes publicKey = 9;
}

message SnapshotBlockListNet {
    repeated SnapshotBlockNet blocks = 1;
}